# QuantitativeLLM

./: .gitignore  LICENSE  README.md
include/: ops.h  utils.h
include/cpu_arch/: amd_r3600_profile.h  i9_13900K_profile.h
include/qttbench/: qtt_cuda_call.cuh  qtt_cuda_runtime.cuh  qtt_cuda_stream.cuh  qtt_data_type.cuh  qtt_state.h  qtt_tensor.cuh
src/elementwise_op/: CMakeLists.txt  elementwise_op.cu
src/reduce/: CMakeLists.txt  reduce.cu
src/relu/: CMakeLists.txt  relu.cu
src/rms_norm/: CMakeLists.txt  rms_norm.cu
src/rope/: CMakeLists.txt  rope.cu
src/sgemm/: CMakeLists.txt  readme.md  sgemm.cu
src/sgemv/: CMakeLists.txt  sgemv.cu
src/sigmoid/: CMakeLists.txt  sigmoid.cu
src/softmax/: CMakeLists.txt  softmax.cu
src/template/: CMakeLists.txt  op.cu
src/tensor/: CMakeLists.txt  tensor_basic.cpp
src/transpose/: CMakeLists.txt  readme.md  transpose_cpu.cpp  transpose_gpu.cu
src/utils/: device_check_gpu.cu
